Fix font-size for text checkbox on mobile

--- a/ui/client-react/src/components/fields/checkbox.scss
+++ b/ui/client-react/src/components/fields/checkbox.scss
@@ -2,8 +2,10 @@
 @import '../../assets/css/_qbVariables';
 
 $checkbox-disabled-opacity: .4;
+
 $checkbox-size: 16px;
 $checkbox-size-mobile: 24px;
+$checkbox-font-size-mobile: 16px;
 
 $input-border-focus-color: rgba(54, 94, 191, 0.25);
 
@@ -127,7 +129,7 @@ $input-border-focus-color: rgba(54, 94, 191, 0.25);
         .label {
             color: $color-black-700;
             display: block;
-            font-size: 14px;
+            font-size: $font-size;
             line-height: normal;
             margin-left: 0;
             overflow: auto;
@@ -137,7 +139,7 @@ $input-border-focus-color: rgba(54, 94, 191, 0.25);
             white-space: normal;
 
             @include small-breakpoint {
-                font-size: 16px;
+                font-size: $checkbox-font-size-mobile;
                 padding-top: 3px;
             }
         }
@@ -171,6 +173,14 @@ $input-border-focus-color: rgba(54, 94, 191, 0.25);
             @include small-breakpoint {
                 padding-left: 3px;
                 font-size: 18px;
+            }
+        }
+
+        .text {
+            font-size: $font-size;
+
+            @include small-breakpoint {
+                font-size: $checkbox-font-size-mobile;
             }
         }
 
